# notepad-extra

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY.md  build.rs  tauri.conf.json
.cargo/: audit.toml
.github/: copilot-instructions.md  pull_request_template.md  release-downloads.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  native-ci.yml  packaging.yml  release.yml  rust.yml
capabilities/: default.json
crates/core/: Cargo.toml
crates/core/fuzz/: .gitignore  Cargo.toml
crates/core/fuzz/fuzz_targets/: brackets_match.rs  edit_diff.rs  encoding_decode.rs  find_search.rs  prefs_parse.rs  text_helpers.rs  update_sequence.rs
crates/core/src/: app.rs  brackets.rs  encoding.rs  find.rs  geometry.rs  history.rs  io.rs  lang.rs  lib.rs  prefs.rs  status.rs  text.rs  textops.rs
crates/core/tests/: stress.rs
crates/iced/: Cargo.toml  VENDORED.md  build.rs
crates/iced/fonts/: ATTRIBUTION.md
crates/iced/src/: fonts.rs  highlight.rs  main.rs  text_editor.rs  theme.rs  watch.rs
crates/iced/wix/: main.wxs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
docs/: native-rendering.md  testing.md
icons/: icon.icns
packaging/: CRATE-LICENSES.md  build-linux.sh  build-macos.sh
packaging/appimage/: build-appimage.sh
packaging/linux/: io.github.PierreFouquet.NotepadExtra.desktop  io.github.PierreFouquet.NotepadExtra.metainfo.xml  notepad-extra.1
scripts/: coverage.sh  gen-index.js  license-audit.sh  packaging-deps.sh
src/: lib.rs  main.rs
src-tauri/: tauri.conf.json
tests/: integration_fs.rs
tests/frontend/: languages.test.js  logic.test.js  packaging.test.js
wix/: main.wxs
