# --- Native-rewrite workspace (issue #25) -------------------------------------
# The root is a *virtual* manifest: it defines only the workspace and its shared
# profiles, no package of its own. The native app lives entirely under `crates/`:
#   * notepad-syntax — shared syntect-backed language catalogue (#32)
#   * notepad-core   — pure, UI-free `update(State, Message) -> Effect` core (#28)
#   * notepad-iced   — thin iced render shell; builds the `notepad-extra` binary
# The native cutover (#46) removed the last of the original app's source, so the
# workspace is now native-only.
[workspace]
members = ["crates/syntax", "crates/core", "crates/iced"]
resolver = "2"

# One product version for the whole workspace: every native crate inherits it via
# `version.workspace = true`, so a release bump has a single source of truth and
# the packagers (deb/rpm/msi/dmg, #43) all read the same number.
[workspace.package]
version = "0.5.0"

# Syntax highlighting (#32) runs on syntect + fancy-regex, whose regex engine is
# an order of magnitude slower when built without optimisation — enough to make
# opening a large file feel sluggish in a plain `dev` build. Optimise just those
# dependencies (and their regex backend); our own crates stay at the default dev
# opt-level so incremental rebuilds and debugging are unaffected. Release builds
# already optimise everything, so this only lifts the debug experience.
[profile.dev.package.syntect]
opt-level = 3
[profile.dev.package.fancy-regex]
opt-level = 3
[profile.dev.package.regex-automata]
opt-level = 3

# Shipped-binary tuning (#100): with iced + tiny-skia + syntect + two-face's
# embedded dumps in the tree, the default release profile (no LTO, 16 codegen
# units, symbols kept) produces the large, unstripped binary distro reviewers
# and AppImage users notice first. Thin LTO + one codegen unit shrink and
# de-duplicate across the 200+ crate graph; stripping drops the symbol tables
# (before/after sizes are recorded in the #100 PR). `panic` deliberately stays
# at the default `unwind`: rfd/ashpd run user callbacks where an abort would be
# a surprise, and unwind keeps `RUST_BACKTRACE` builds useful.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
