[package]
name = "notepad-core"
version.workspace = true
edition = "2024"
description = "Pure, UI-free editor core (update / State / Message / Effect) for notepad-extra's native rewrite."
authors = ["Pierre Fouquet"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/PierreFouquet/notepad-extra"
repository = "https://github.com/PierreFouquet/notepad-extra"

# The core is toolkit-agnostic and must build offline with no C libraries. Side
# effects (file I/O, dialogs) are described as `Effect` values and executed by
# the render shell, never here.
[dependencies]
# Language detection + the picker catalogue (#32), syntect-backed but exposing
# only `&'static str` names — no syntect type reaches this crate's API. Pure Rust
# (fancy-regex, no oniguruma C dep), so the core's no-C-libraries rule still holds.
notepad-syntax = { path = "../syntax" }

# Find / Replace (#33). `regex` is a finite-automaton engine: matching is
# linear-time with no backtracking, so no pattern can hang the UI — that is the
# epic's "catastrophic-regex guard", achieved by construction rather than with a
# timeout. Pure Rust, no C dependency, and already present in the locked tree
# (zero new crates to vendor for #17).
regex = { version = "1", default-features = false, features = ["std", "unicode"] }

# Preferences persistence (#38). The on-disk config is (de)serialized with the
# project's existing serde stack — both crates are already in `Cargo.lock` via
# the root Tauri app, so this adds nothing new to vendor for #17. JSON keeps the
# file human-readable and hand-editable, staying fully offline and local-only.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3.6"
