[package]
name = "notepad-core"
version.workspace = true
edition = "2024"
description = "Pure, UI-free editor core (update / State / Message / Effect) for notepad-extra's native rewrite."
authors = ["Pierre Fouquet"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/PierreFouquet/notepad-extra"
repository = "https://github.com/PierreFouquet/notepad-extra"

# The core is toolkit-agnostic and must build offline with no C libraries. Side
# effects (file I/O, dialogs) are described as `Effect` values and executed by
# the render shell, never here.
[dependencies]
# Language detection + the picker catalogue (#32), syntect-backed but exposing
# only `&'static str` names — no syntect type reaches this crate's API. Pure Rust
# (fancy-regex, no oniguruma C dep), so the core's no-C-libraries rule still holds.
notepad-syntax = { path = "../syntax" }

# Find / Replace (#33). `regex` is a finite-automaton engine: matching is
# linear-time with no backtracking, so no pattern can hang the UI — that is the
# epic's "catastrophic-regex guard", achieved by construction rather than with a
# timeout. Pure Rust, no C dependency, and already present in the locked tree
# (zero new crates to vendor for #17).
regex = { version = "1", default-features = false, features = ["std", "unicode"] }

# Preferences persistence (#38). The on-disk config is (de)serialized with the
# project's existing serde stack — both crates are already in `Cargo.lock`, so
# this adds nothing new to vendor for #17. JSON keeps the
# file human-readable and hand-editable, staying fully offline and local-only.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Multi-encoding open/save (#50/#59/#103). `encoding_rs` is the WHATWG Encoding
# Standard implementation (UTF-8/UTF-16/legacy code pages); `chardetng` is its
# companion charset detector for files with no BOM. Both are pure Rust with no C
# dependency and make no network calls, so the offline / no-C-libraries rule
# holds and they survive distro (de-)vendoring. Licences (encoding_rs:
# Apache-2.0/MIT + BSD-3-Clause; chardetng: MPL-2.0/Apache-2.0) are all
# GPL-3.0-or-later compatible.
encoding_rs = "0.8"
chardetng = "1"

# Unicode-correct word segmentation for the status-bar word count (#55) and the
# grapheme-/word-aware text operations — Title-case word boundaries (#54).
# `unicode-segmentation` implements UAX #29; pure Rust, no C dependency, no
# network, and already present in the locked tree (a transitive dep of syntect
# via `notepad-syntax`), so promoting it to a direct dependency vendors nothing
# new for #17.
unicode-segmentation = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3.6"
