[package]
name = "notepad-iced"
version = "0.1.0"
edition = "2024"
description = "Thin iced render shell for notepad-extra's native rewrite: executes the pure core's Effects (#28)."
authors = ["Pierre Fouquet"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/PierreFouquet/notepad-extra"
repository = "https://github.com/PierreFouquet/notepad-extra"

# The shell is deliberately *thin*: all behaviour lives in `notepad-core`'s pure
# `update(State, Message) -> Vec<Effect>`. This crate only renders `view`s and
# executes the returned `Effect`s (dialogs via `rfd`, file I/O via
# `notepad-core::io`, the window title). Syntax highlighting is a separate
# concern tracked in #32; the software-renderer / no-GPU choice is #26.
[dependencies]
notepad-core = { path = "../core" }

# Software renderer only (`tiny-skia`) — no wgpu, no GPU requirement (#26). The
# `x11`/`wayland` features wire the software surface (softbuffer) to the Linux
# display servers; without them softbuffer builds with no backend.
iced = { version = "0.14", default-features = false, features = [
    "tiny-skia",
    "x11",
    "wayland",
    "thread-pool",
    "advanced",
] }

# Word-wrap (#34) exposed that iced 0.14's `text_editor` renders no scrollbar and
# offers no horizontal scroll. To add a visible scrollbar we vendor the widget
# (`src/text_editor.rs`) and reach its concrete editor's scroll offset, which
# lives on `iced_graphics::text::Editor::buffer().scroll()`. Both crates are
# pinned to the exact versions iced 0.14 already resolves, so cargo unifies the
# types and this adds nothing to vendor for the source-built story (#17).
iced_core = "=0.14.0"
iced_graphics = "=0.14.0"

# Native file dialogs. `xdg-portal` keeps us off GTK/webkit build deps (the whole
# point of the migration); `async-std` gives rfd its own executor so it works
# regardless of iced's runtime.
rfd = { version = "0.15", default-features = false, features = [
    "xdg-portal",
    "async-std",
] }

# Decode the embedded `icons/icon.png` into RGBA for the window icon (#66). Pure
# Rust and already in `Cargo.lock`, so it adds nothing to vendor for the
# source-built packaging story (#17). iced's `from_file_data` needs its `image`
# feature (off under our `default-features = false` build), so we decode here and
# hand raw RGBA to `window::icon::from_rgba`.
png = { version = "0.18", default-features = false }

# The vendored `text_editor` (src/text_editor.rs) keeps upstream iced's
# `#[cfg(feature = ...)]` gates on capabilities we don't build: `highlighter`
# (syntax highlighting via `iced_highlighter`, tracked in #32) and `advanced`
# (the `class` style setter — we use the `style` closure instead). Declaring the
# features here — off, enabling nothing — leaves that code compiled out while
# making the cfg names known, so the `-D warnings` clippy job stays clean (#34).
[features]
highlighter = []
advanced = []

[dev-dependencies]
# Real temp files for the preferences save→reload round-trip test (#38). Already
# in `Cargo.lock` via the workspace, so it adds nothing to vendor for #17.
tempfile = "3.6"
