[package]
name = "notepad-iced"
version.workspace = true
edition = "2024"
description = "Thin iced render shell for notepad-extra's native rewrite: executes the pure core's Effects (#28)."
authors = ["Pierre Fouquet"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/PierreFouquet/notepad-extra"
repository = "https://github.com/PierreFouquet/notepad-extra"

# The shipped binary is `notepad-extra`, not the crate name (#95): the desktop
# entry (`Exec=notepad-extra %F`), the man page `notepad-extra(1)` and the
# packaged install all point at that name, so the built binary must match. The
# workspace root is a virtual manifest with no package of its own, so this binary
# name is unambiguous across the workspace.
[[bin]]
name = "notepad-extra"
path = "src/main.rs"

# The shell is deliberately *thin*: all behaviour lives in `notepad-core`'s pure
# `update(State, Message) -> Vec<Effect>`. This crate only renders `view`s and
# executes the returned `Effect`s (dialogs via `rfd`, file I/O via
# `notepad-core::io`, the window title). Syntax highlighting is a separate
# concern tracked in #32; the software-renderer / no-GPU choice is #26.
[dependencies]
notepad-core = { path = "../core" }

# Syntax highlighting (#32). The shared syntect-backed catalogue: the shell's
# `SyntectHighlighter` (src/highlight.rs) parses with these same `SyntaxSet` /
# `ThemeSet`, so what it colours can never disagree with what the core detects.
# `syntect` reaches the shell transitively through this crate (fancy-regex, no
# oniguruma C dep) — we never enable iced's own `iced_highlighter` path.
notepad-syntax = { path = "../syntax" }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Software renderer only (`tiny-skia`) — no wgpu, no GPU requirement (#26). The
# `x11`/`wayland` features wire the software surface (softbuffer) to the Linux
# display servers; without them softbuffer builds with no backend.
iced = { version = "0.14", default-features = false, features = [
    "tiny-skia",
    "x11",
    "wayland",
    "thread-pool",
    "advanced",
] }

# Word-wrap (#34) exposed that iced 0.14's `text_editor` renders no scrollbar and
# offers no horizontal scroll. To add a visible scrollbar we vendor the widget
# (`src/text_editor.rs`) and reach its concrete editor's scroll offset, which
# lives on `iced_graphics::text::Editor::buffer().scroll()`. Both crates are
# pinned to the exact versions iced 0.14 already resolves, so cargo unifies the
# types and this adds nothing to vendor for the source-built story (#17).
iced_core = "=0.14.0"
iced_graphics = "=0.14.0"

# Native file dialogs. `xdg-portal` keeps us off GTK system build deps (a goal of
# the native rewrite); `async-std` gives rfd its own executor so it works
# regardless of iced's runtime.
rfd = { version = "0.15", default-features = false, features = [
    "xdg-portal",
    "async-std",
] }

# Decode the embedded `icons/icon.png` into RGBA for the window icon (#66). Pure
# Rust and already in `Cargo.lock`, so it adds nothing to vendor for the
# source-built packaging story (#17). iced's `from_file_data` needs its `image`
# feature (off under our `default-features = false` build), so we decode here and
# hand raw RGBA to `window::icon::from_rgba`.
png = { version = "0.18", default-features = false }

# The vendored `text_editor` (src/text_editor.rs) keeps upstream iced's
# `#[cfg(feature = ...)]` gates on capabilities we don't build: `highlighter`
# (syntax highlighting via `iced_highlighter`, tracked in #32) and `advanced`
# (the `class` style setter — we use the `style` closure instead). Declaring the
# features here — off, enabling nothing — leaves that code compiled out while
# making the cfg names known, so the `-D warnings` clippy job stays clean (#34).
[features]
highlighter = []
advanced = []

[dev-dependencies]
# Real temp files for the preferences save→reload round-trip test (#38). Already
# in `Cargo.lock` via the workspace, so it adds nothing to vendor for #17.
tempfile = "3.6"

# Headless UI interaction tests (#70): iced 0.14's `Simulator` drives the real
# widget tree with the tiny-skia software renderer — no window, no GPU — finding
# widgets by their visible text and returning the `Message`s they emit, which the
# tests feed back through `Shell::update`. This exercises `view` end-to-end on all
# three CI OSes. Dev-only (never shipped) and, per the #70 plan's source check,
# it enables `iced_renderer` with only `fira-sans`, so it pulls in no wgpu and
# stays tiny-skia-only like the shell itself.
iced_test = "=0.14.0"

# --- Native packaging (#43) ---------------------------------------------------
# The shipped binary is packaged with standard cargo tooling. cargo-deb and
# cargo-generate-rpm build the Linux packages, cargo-bundle the macOS .app/.dmg,
# and cargo-wix the Windows .msi (via wix/main.wxs). All read this crate's
# package fields (version, description, license, homepage) plus the
# per-format metadata below. The `notepad-extra` binary needs no system
# GUI-toolkit runtime (software-rendered iced + xdg-portal dialogs) — only the
# X11/Wayland/xkb/font libraries it dlopens remain (see `depends`/`requires`;
# #44 proves them).

# cargo-deb: asset *source* paths are relative to this manifest (`crates/iced/`),
# so repo-root files use `../../`; the built binary is taken from the workspace
# `target/` dir (cargo-deb special-cases `target/`).
[package.metadata.deb]
# The Debian package, binary and #15 assets are all `notepad-extra`, not the
# crate name `notepad-iced`.
name = "notepad-extra"
maintainer = "Pierre Fouquet <pierrefouquet93@gmail.com>"
section = "editors"
priority = "optional"
license-file = ["../../LICENSE", "0"]
extended-description = """\
Notepad Extra is a small, fast, fully offline text and code editor for Windows, \
macOS and Linux, inspired by Notepad++. It offers tabbed editing, syntax \
highlighting for 80+ languages, find/replace/go-to-line, word wrap, editor zoom \
and light/dark themes, and preserves each file's original line endings on save.\
"""
# `$auto` derives the ELF-linked libs (libc6, libgcc-s1); the rest are dlopened
# by winit/softbuffer (X11/Wayland/xkb) and cosmic-text (fontconfig) and so are
# invisible to shlibdeps — they must be named. #44 (install into a clean
# container + launch under xvfb) is the check that this list is complete.
depends = "$auto, libxkbcommon0, libxkbcommon-x11-0, libwayland-client0, libx11-6, libxcb1, libxcursor1, libxrandr2, libxi6, libfontconfig1"
assets = [
    ["target/release/notepad-extra", "usr/bin/notepad-extra", "755"],
    ["../../packaging/linux/io.github.PierreFouquet.NotepadExtra.desktop", "usr/share/applications/io.github.PierreFouquet.NotepadExtra.desktop", "644"],
    ["../../packaging/linux/io.github.PierreFouquet.NotepadExtra.metainfo.xml", "usr/share/metainfo/io.github.PierreFouquet.NotepadExtra.metainfo.xml", "644"],
    ["../../packaging/linux/notepad-extra.1", "usr/share/man/man1/notepad-extra.1", "644"],
    ["../../icons/32x32.png", "usr/share/icons/hicolor/32x32/apps/io.github.PierreFouquet.NotepadExtra.png", "644"],
    ["../../icons/64x64.png", "usr/share/icons/hicolor/64x64/apps/io.github.PierreFouquet.NotepadExtra.png", "644"],
    ["../../icons/128x128.png", "usr/share/icons/hicolor/128x128/apps/io.github.PierreFouquet.NotepadExtra.png", "644"],
    ["../../icons/128x128@2x.png", "usr/share/icons/hicolor/256x256/apps/io.github.PierreFouquet.NotepadExtra.png", "644"],
]

# cargo-generate-rpm reads its own asset list; source paths are relative to the
# workspace root, where the release/CI scripts invoke `cargo generate-rpm`.
# auto-req (find-requires on the ELF) covers the linked libs; `requires` names
# the dlopened ones by their Fedora package names.
[package.metadata.generate-rpm]
name = "notepad-extra"
assets = [
    { source = "target/release/notepad-extra", dest = "/usr/bin/notepad-extra", mode = "755" },
    { source = "packaging/linux/io.github.PierreFouquet.NotepadExtra.desktop", dest = "/usr/share/applications/io.github.PierreFouquet.NotepadExtra.desktop", mode = "644" },
    { source = "packaging/linux/io.github.PierreFouquet.NotepadExtra.metainfo.xml", dest = "/usr/share/metainfo/io.github.PierreFouquet.NotepadExtra.metainfo.xml", mode = "644" },
    { source = "packaging/linux/notepad-extra.1", dest = "/usr/share/man/man1/notepad-extra.1", mode = "644" },
    { source = "icons/32x32.png", dest = "/usr/share/icons/hicolor/32x32/apps/io.github.PierreFouquet.NotepadExtra.png", mode = "644" },
    { source = "icons/64x64.png", dest = "/usr/share/icons/hicolor/64x64/apps/io.github.PierreFouquet.NotepadExtra.png", mode = "644" },
    { source = "icons/128x128.png", dest = "/usr/share/icons/hicolor/128x128/apps/io.github.PierreFouquet.NotepadExtra.png", mode = "644" },
    { source = "icons/128x128@2x.png", dest = "/usr/share/icons/hicolor/256x256/apps/io.github.PierreFouquet.NotepadExtra.png", mode = "644" },
]

[package.metadata.generate-rpm.requires]
libxkbcommon = "*"
"libxkbcommon-x11" = "*"
libwayland-client = "*"
libX11 = "*"
libxcb = "*"
libXcursor = "*"
libXrandr = "*"
libXi = "*"
fontconfig = "*"

# macOS .app / .dmg via cargo-bundle. It assembles an .icns from these PNG
# sources at build time. Icon paths are relative to this manifest.
[package.metadata.bundle]
name = "Notepad Extra"
identifier = "io.github.PierreFouquet.NotepadExtra"
icon = ["../../icons/32x32.png", "../../icons/128x128.png", "../../icons/128x128@2x.png", "../../icons/icon.png"]
category = "public.app-category.utilities"
# The supported macOS floor: 14 (Sonoma). Declared as LSMinimumSystemVersion in
# the .app's Info.plist so LaunchServices enforces it on both arch bundles; older
# macOS is out of support (Apple Silicon is 11.0+ by hardware anyway). (#99)
osx_minimum_system_version = "14.0"
short_description = "Small, fast, fully offline text and code editor"
long_description = "Notepad Extra is a small, fast, fully offline text and code editor for Windows, macOS and Linux, inspired by Notepad++."
copyright = "Copyright © Pierre Fouquet. GNU GPL v3 or later."
